# ccs-aggregator

./: README.md  pyproject.toml  setup.py
app/: main.py
app/configs/: _settings.py  general_config.py
app/routers/: __init__.py
app/routers/v1/: health_check.py
